# msgspec-click

./: 404.html  README.md  hatch.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  ruff_defaults.toml  sitemap.xml
.github/workflows/: build.yml  docs.yml  test.yml
api/: index.html
changelog/: index.html
docs/: api.md  changelog.md  index.md  usage.md
search/: search_index.json
src/msgspec_click/: __init__.py  _core.py
tests/: test_options.py
usage/: index.html
